# Change Log

The format is based on [Keep a Changelog](http://keepachangelog.com/).

## [Unreleased]
### Changed
- 대여확정 문자 내용 변경 (https://github.com/opencloset/OpenCloset-Cron-SMS/issues/45)
- 예약완료 문자 내용 변경 (https://github.com/opencloset/OpenCloset-Cron-SMS/issues/44)
- 반납문자 내용 변경 (https://github.com/opencloset/OpenCloset-Cron-SMS/issues/36)

## [v0.1.17] - Sun, 28 Feb 2021 08:36:47 +0900
### Added
- 결혼식의 상세목적이 본식 또는 웨딩촬영일때에 주문서에 태그를 추가해 식별할 수 있게함 (#36)

## [v0.1.16] - Sun, 31 May 2020 11:42:32 +0900
### Changed
- 예약직후에 서울시 이벤트 대상자에게 발송하던 이용안내 SMS 를 보내지 않음(#1696)

## [v0.1.15] - 2020-04-14 02:42:56 Asia/Seoul
### Added
- 입사면접이 화상면접인 주문서 생성 및 예약시 태그를 추가해 식별할 수 있게함 (#33)

## [v0.1.14] - Tue, 25 Feb 2020 22:13:51 +0900
### Fixed
- 예약직후에 서울시 이벤트 대상자에게 이용안내 SMS 를 발송
  대여목적을 사용자 정보에서 참조하도록 함(#31)

## [v0.1.13] - Mon, 24 Feb 2020 23:13:36 +0900
### Changed
- 예약직후에 서울시 이벤트 대상자에게 이용안내 SMS 를 발송 (#31)

## [v0.1.12] - Sun, 15 Dec 2019 12:41:11 +0900
### Changed
- 동적으로 예약슬롯을 변경해서 최대치 예약이 가능토록 함 (#28)

## [v0.1.11] - Sat, 14 Dec 2019 17:34:23 +0900
### Fixed
- 셋트대여가 아닐 경우에는 타이의 가격을 2000 원으로 책정 (#26)

## [v0.1.10] - Sat, 26 Jan 2019 14:08:07 +0900
### Changed
- 반납 문자 내용 변경 (#25)

## [v0.1.9] - Wed, 16 Jan 2019 16:50:03 +0900
### Fixed
- 쿠폰 limit 갯수 파악을 위해 coupon.desc 대신에 coupon.event_id 를 참조함 (#1537)

## [v0.1.8] - Tue, 15 Jan 2019 17:43:08 +0900
### Changed
- 서울시 이벤트 예약확정 문자의 연도(year) 변경

## [v0.1.7] - Wed, 26 Sep 2018 18:26:58 +0900
### Changed
- 대여가 확정되었을때에 사용자정보의 특정 값을 주문서로 복사 (#21)

## [v0.1.6] - Sun, 16 Sep 2018 15:11:39 +0900
### Changed
- 반납 확인 메세지를 online/offline 구별해서 전송 (#19)

## [v0.1.5] - Sat, 24 Mar 2018 12:59:57 +0900

### Changed
- 예약이나 예약변경시 주문서의 의류착용일을 사용자의 의류착용일로 수정 (#11)

## [v0.1.4] - Tue, 27 Feb 2018 01:11:27 +0900

### Changed
- 취업날개 방문예약시 발송되는 문자 메세지 내용 수정 (#18)

## [v0.1.3] - Thu, 22 Feb 2018 12:56:48 +0900

### Changed
- 취업날개 최초예약과 예약시간변경의 호출 parameter 를 다르게 함

## [v0.1.2] - Mon, 12 Feb 2018 03:34:50 +0900

### Changed
- 쿠폰 허용 개수 제한을 고려해 사용을 가능하게 함 (#14)