@@ -2059,14 +2059,16 @@ https://www.instagram.com/opencloset_suit/
 
 @@ employment-wing.txt
 % my ($year) = @_;
-[열린옷장] <%= $year %> 취업날개 서비스
+<%= $year %> 취업날개 무료대여 안내
 
-올해 면접정장 무료대여는 '서울시' 거주 중인 고교졸업예정자~34세를 대상으로 합니다. 아래 거주지 증빙 미지참시 무료 대여가 되지 않습니다.
+1. 대상 : 서울시 거주 중인 고교졸업예정자~ 만 39세 입사면접 예정자
 
-1. 주민등록상 서울시 거주자인 경우 : 서울시 주소와 나이를 증명할 수 있는 신분증(주민등록증, 운전면허증, 등본)
-2. 서울소재 학교 재학생/졸업생인 경우 : 학생증/졸업증명서 + 서울거주 증명서류(본인명의 계약서, 수도전기 고지서 등)
+2. 대여시 필수 지참서류
 
-매회 이용시 증빙이 필요하며, 이용조건 증빙이 없는 경우 무료대여 서비스를 이용할 수 없음을 거듭 안내드립니다. 감사합니다.
+- 주민등록지가 서울인 경우 : 주민등록증 / 주민등록등본 / 운전면허증 (사진 증빙 가능)
+- 주민등록지는 서울이 아니나 서울에 거주하는 경우 : 실거주 증명이 가능한 부동산계약서 / 수도전기 고지서 / 고시원,기숙사 입주확인서 / 택배 운송장 / 배달앱 이용내역 (본인 이름으로 된 증빙 만 인정)
+
+매회 이용시 증빙이 필요하니 꼭 챙겨서 방문 부탁드립니다.
 
 @@ booking-cancel.txt
 % my ($name, $datetime) = @_;
